data/derived/comb/progs/unify/prog5827.ml.out
Characters 111-128:
  let seen' = (if List.mem (h,seen) then [] else (seen) @ h) in
                  ^^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'b) list -> bool
       but an expression was expected of type bool
